--- a/Client/CountOnIt.Client.csproj
+++ b/Client/CountOnIt.Client.csproj
@@ -12,9 +12,11 @@
   <ItemGroup>
     <PackageReference Include="Blazorise" Version="1.5.2" />
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.5.2" />
+    <PackageReference Include="Blazorise.Charts" Version="1.5.2" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.5.2" />
     <PackageReference Include="Blazorise.Licensing" Version="1.2.0" />
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Lambda2Js" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.10" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.10" />
