--- a/Shared/CountOnIt.Shared.csproj
+++ b/Shared/CountOnIt.Shared.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Blazorise" Version="1.5.2" />
+    <PackageReference Include="Blazorise.Charts" Version="1.5.2" />
     <PackageReference Include="Blazorise.Licensing" Version="1.2.0" />
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Lambda2Js" Version="3.1.4" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.29" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.29">
