--- a/Server/CountOnIt.Server.csproj
+++ b/Server/CountOnIt.Server.csproj
@@ -9,6 +9,12 @@
 	<WasmServiceWorkerAssetsManifest>wwwroot\service-worker-wasm-assets.js</WasmServiceWorkerAssetsManifest>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+	<PropertyGroup>
+		<SatelliteResourceLanguages>he</SatelliteResourceLanguages>
+	</PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Blazorise" Version="1.5.3" />
