עמוד מבט על- הרקע של הכותרת נצבע בהתאם לצבע הקטגוריה

--- a/Client/CountOnIt.Client.csproj
+++ b/Client/CountOnIt.Client.csproj
@@ -41,4 +41,10 @@
     <ProjectReference Include="..\Shared\CountOnIt.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="CountOnIt.Client">
+      <HintPath>obj\Debug\net6.0\CountOnIt.Client.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
