--- a/Shared/CountOnIt.Shared.csproj
+++ b/Shared/CountOnIt.Shared.csproj
@@ -4,11 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Configurations>Debug;Release;wallak</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>True</Optimize>
   </PropertyGroup>
+
 	<PropertyGroup>
 		<SatelliteResourceLanguages>he</SatelliteResourceLanguages>
 	</PropertyGroup>
