--- a/Client/CountOnIt.Client.csproj
+++ b/Client/CountOnIt.Client.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'CountOnIt' ">
@@ -11,9 +12,15 @@
   </PropertyGroup>
 	<PropertyGroup>
 		<SatelliteResourceLanguages>he</SatelliteResourceLanguages>
+		<BaseOutputPath>C:\Users\97258\OneDrive\Desktop\FinalProject_GithubRepository\CountOnIt\Client\bin</BaseOutputPath>
+		<BaseIntermediateOutputPath>C:\Users\97258\OneDrive\Desktop\FinalProject_GithubRepository\CountOnIt\Client\obj</BaseIntermediateOutputPath>
 	</PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <Optimize>True</Optimize>
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Blazorise" Version="1.5.3" />
